  - Fixed defect #1105 Black bar at the top of images if aspect ratio is wrong
  - Fixed defect #1106 Fanart doesn't exist/download
  - Fixed defect #1107 Error Message when Scraping TV Series in TheTVDB API
  - Enhancement  #1108 Release date parsing for IMDB broken
  - Fixed defect #1117 Local videoimages copy error
  - Enhancement  #1119 Include movie counter in cmd window
  - Enhancement  #1121 File size scanning/support for skin details
  - Enhancement  #1122 YAMJ Version Stamp in XML files.
  - Enhancement  #1124 Hebrew skin - playing BluRay backups with menu in C200
  - Fixed defect #1125 Better handling of non-English characters in the command window output
  - Enhancement  #1129 Skins: XSL parameters instead of variables (preferences.xsl)
  - Fixed defect #1130 YAMJ gives a titleless episode 00 the same title as episode 01
  - Enhancement  #1136 Retry downloading incomplete images (Artwork)
  - Fixed defect #1137 HTML files for sets are not generated if mjb.categories.displayList does not contain set
  - Enhancement  #1140 Add WEB-DL and iTunes to list of source keywords
  - Fixed defect #1146 Apple Movie Trailers not downloaded in the proper BDMV directory with BluRays
  - Fixed defect #1147 Trailer tag in NFO being interpreted as an EXTRA by YAMJ
  - Fixed defect #1166 Correct the URL for streaming Apple Trailers
  - Fixed defect #1177 IMDb Rating not detected
  - Enhancement        Default skin: Highlighting of current category
  - Enhancement        Default skin: "T9"-navigation over title first letters  

MovieJukebox 1.6
----------------
  - Enhancement   #777 Override file for moviejukebox.properties 
  - Fixed defect  #881 Custom image always picking season 1 for the "BOX set" image for escaped series names.
  - Enhancement   #955 Option to download SERIES banners instead of SEASON
  - Enhancement   #970 Updated/improved threading functionality to increase stability & throttle downloads on a per site basis